--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/duckie.ico">
+  <meta name="description" content="Caitlin Quach's Resume">
+  <meta name="author" content="862289458">
 
-  <title>John Doe - Business Administration</title>
+  <title>Caitlin Quach - Business Economics</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Caitlin Quach</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/caitlinquach.jpg" alt="Profile Picture">
       </span>
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Caitlin Quach
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">I graduated in the summer of 2021 from Milpitas High School after attending the school for four years, three of those years being part of the Digital Business Academy, or DBA. In DBA, the students are exposed to different jobs and experience mock interviews and learn practical skills such as Excel, Word, and even a bit of HTML in preparation for the job-hunting world. The academy also includes meeting speakers from different jobs and learning about them in order to solidify their decision on their career choice in the future. Field trips are conducted to different colleges so the students become familiar with different campuses in order to broaden their options. From that academy, I have become familiar with the job hunting process and fairly proficient in Excel and Microsoft Word. During high school, I also took classes such as AP Calculus AB, AP Calculus BC, English 1A, English 1B, Honors English, and Honors Chemistry. My overall GPA during high school was around a 3.8 or 3.9.<br><br>
 
-        Enter bio here<br><br>
+        As a result of doing community service to help fund the Milpitas High School Debate Club, I became accustomed to handling money and making quick calculations in order to determine the amount needed and the change from distributing the snacks meant to be sold to the attendees. Due to the location, which was in a cafeteria where all the contestants were residing before the competition, I am also used to focusing and making calculations in noisy environments where many different discussions and conversations could derail my thought process. Furthermore, sometimes I help my parents with the calculations in regards to Vietnamese New Years' red envelopes and the Target Gift Cards for Christmas, thus making me a bit more familiar with calculations on a smaller scale. <br><br>
 
-        Enter bio here
+        During the summer of 2019, I volunteered to help at my high school, which was Milpitas High School, to sort and label the textbooks and books set to be used the following year. By helping out, I have become familiar with organizing and taking inventory of the required materials needed for the following school year. The work was not just limited to sitting down to count and label textbooks, it also had me determine which materials went to which classroom thus requiring me to find the best way to transfer books to their classrooms and where to stack them as the classrooms were often cluttered in preparation for the following school year. This was also useful when planning the system and work to be done for a plant nursery I also volunteered at where I worked with others to plant saplings and mixing the soil for the nursery.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://facebook.com">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/CaitlinQuach">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://youtube.com">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:quachalmal@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,45 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
-            <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
-            </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
-          <div class="resume-content">
             <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">MHS Debate Club</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • handled debate club funds<br> 
+              • focused in noisy enviroment<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">June 2017 - July 2017</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
+          <div class="resume-content">
+            <h3 class="mb-0">Volunteer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Milpitas High School</a></div>
+            <p>
+              • Organized materials for following school year<br>
+              • Delivered books to various classrooms<br>
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2019 - July 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
+            <h3 class="mb-0">Volunteer</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Handed correct bibs to marathon runners<br>
+            • Directed participants to help desks<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">June 2019 - July 2019</span>
           </div>
         </div>
 
@@ -152,36 +149,12 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors in Business Economics</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2021 - Present</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
       </div>
     </section>
 
@@ -191,7 +164,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/simple.png" width="500px">
+            <img src="img/sleepi.png" width="500px"><br>
+            <img src="img/witch.png" width="500px">
+            <img src="img/nya.png" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +175,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Caitlin Quach</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
